# lilly

./: .gitignore  README.md
Dona/: README.md  agents.py  crew.py  main.py  pyproject.toml  tasks.py
Dona/src/bottle/: crew.py  main.py
Dona/tools/: directory_reader.py
PeaceLilly/: pyproject.toml
PeaceLilly/src/lilly/: crew.py  main.py
PeaceLilly/src/lilly/config/: tasks.yaml
src/lilly/: crew.py
