[project]
name = "bottle"
version = "0.1.0"
description = "bottle using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0"
]

[project.scripts]
bottle = "bottle.main:run"
run_crew = "bottle.main:run"
train = "bottle.main:train"
replay = "bottle.main:replay"
test = "bottle.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
