[project]
name = "lilly"
version = "0.1.0"
description = "lilly using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.74.2,<1.0.0"
]

[project.scripts]
lilly = "lilly.main:run"
run_crew = "lilly.main:run"
train = "lilly.main:train"
replay = "lilly.main:replay"
test = "lilly.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
